LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/AlternateEmailID__c.field-meta.xml
<CustomField>
    <fullName>AlternateEmailID__c</fullName>
    <label>Alternate Email ID</label>
    <type>Email</type>
</CustomField>