LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <label>Attendee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>