LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <description>It is used to capture profile information from CapIQ/MCA.</description>
    <label>Contact Background</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>