LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Business_Non_Business_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Business_Non_Business_Campaign__c</fullName>
    <label>Business Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>