LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Campaign&quot; of the new client on conversion of which contact record is created.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>