LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Chamber_contacts__c.field-meta.xml
<CustomField>
    <fullName>Chamber_contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Chamber contacts&quot; of the new client on conversion of which contact record is created.</description>
    <label>Chamber contacts</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contacts (Chamber contacts)</relationshipLabel>
    <relationshipName>Client_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>