LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Channel_and_Alliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_and_Alliance_Type__c</fullName>
    <description>This field contains the value of &quot;Channel and Alliance Type&quot; field of associated account.</description>
    <formula>TEXT( Account.Channel_and_Alliance_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel and Alliance Type</label>
    <type>Text</type>
</CustomField>