LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Click_to_view_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Click_to_view_Client_Contact__c</fullName>
    <description>This field used to navigate to client contact record and used on DS TEam Approval Layout.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, FirstName &amp;&quot; &quot;&amp; LastName , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click to view Client Contact</label>
    <type>Text</type>
</CustomField>