LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Client Contact&quot; of the new client on conversion of which contact record is created.</description>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>