LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Client_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Record_Type__c</fullName>
    <description>This field contains record type of associated client record.</description>
    <label>Client Contact Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>