LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Client_Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Source__c</fullName>
    <label>Client Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CapIq</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>Introhive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>