LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Contact Address (Mandatory)</label>
    <type>Address</type>
</CustomField>