LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Client Name&quot; of the new client on conversion of which contact record is created.</description>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts (Client Name)</relationshipLabel>
    <relationshipName>Client_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>