LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sector__c</fullName>
    <formula>TEXT(Account.Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Sector</label>
    <type>Text</type>
</CustomField>