LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/ClientCorporateAddress__c.field-meta.xml
<CustomField>
    <fullName>ClientCorporateAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Corporate Address</label>
    <type>Checkbox</type>
</CustomField>