LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/ClientGroupName__c.field-meta.xml
<CustomField>
    <fullName>ClientGroupName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>