LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/CoCsl__c.field-meta.xml
<CustomField>
    <fullName>CoCsl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>