LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Committee_Names__c.field-meta.xml
<CustomField>
    <fullName>Committee_Names__c</fullName>
    <label>Committee Names</label>
    <type>TextArea</type>
</CustomField>