LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/ConsentToReceiveAllGTCommunication__c.field-meta.xml
<CustomField>
    <fullName>ConsentToReceiveAllGTCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent To Receive All GT Communication</label>
    <type>Checkbox</type>
</CustomField>