LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Contact_Interest__c.field-meta.xml
<CustomField>
    <fullName>Contact_Interest__c</fullName>
    <label>Contact Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wine connoisseur</fullName>
            </value>
            <value>
                <fullName>Art Lover</fullName>
            </value>
            <value>
                <fullName>Golf Enthusiast</fullName>
            </value>
            <value>
                <fullName>Movie Buff</fullName>
            </value>
            <value>
                <fullName>Travel Junkie</fullName>
            </value>
            <value>
                <fullName>Tech Buff</fullName>
            </value>
            <value>
                <fullName>Cricket Enthusiast</fullName>
            </value>
            <value>
                <fullName>Sports follower</fullName>
            </value>
            <value>
                <fullName>Fitness freak</fullName>
            </value>
            <value>
                <fullName>Adventure Sports Enthusiast</fullName>
            </value>
            <value>
                <fullName>Avid Reader</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>