LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <label>Contact Location</label>
    <type>Address</type>
</CustomField>