LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Contact_status__c.field-meta.xml
<CustomField>
    <fullName>Contact_status__c</fullName>
    <defaultValue>&apos;New Contact Creation&apos;</defaultValue>
    <label>Contact status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contact Creation</fullName>
                <color>#FF6666</color>
                <default>true</default>
                <label>New Contact Creation</label>
            </value>
            <value>
                <fullName>Pending DS Team Approval</fullName>
                <color>#FFCC33</color>
                <label>Pending DS Team Approval</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <color>#78C953</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <color>#999999</color>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>