LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/ContactCode__c.field-meta.xml
<CustomField>
    <fullName>ContactCode__c</fullName>
    <displayFormat>Cont-{00000}</displayFormat>
    <label>Contact Code</label>
    <type>AutoNumber</type>
</CustomField>