LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Country_Corridor__c.field-meta.xml
<CustomField>
    <fullName>Country_Corridor__c</fullName>
    <formula>TEXT( Account.Country_Corridor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Corridor</label>
    <type>Text</type>
</CustomField>