LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Country_HQ__c.field-meta.xml
<CustomField>
    <fullName>Country_HQ__c</fullName>
    <formula>TEXT(Account.Country_HQ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country HQ</label>
    <type>Text</type>
</CustomField>