LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Created_by_External_DB__c.field-meta.xml
<CustomField>
    <fullName>Created_by_External_DB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created by External DB</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>