LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>