LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Current_Directorship_Date_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Current_Directorship_Date_of_Appointment__c</fullName>
    <label>Current Directorship Date of Appointment</label>
    <type>Date</type>
</CustomField>