LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/DirectLineNumber__c.field-meta.xml
<CustomField>
    <fullName>DirectLineNumber__c</fullName>
    <label>Direct Line Number</label>
    <type>Phone</type>
</CustomField>