LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/DS_Team_verification_date__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_verification_date__c</fullName>
    <label>DS Team verification date</label>
    <type>Date</type>
</CustomField>