LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/DS_team_verified_by__c.field-meta.xml
<CustomField>
    <fullName>DS_team_verified_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DS team verified by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>