LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/EAContactNo__c.field-meta.xml
<CustomField>
    <fullName>EAContactNo__c</fullName>
    <label>EA Contact No</label>
    <type>Phone</type>
</CustomField>