LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/EAEmailID__c.field-meta.xml
<CustomField>
    <fullName>EAEmailID__c</fullName>
    <label>EA Email ID</label>
    <type>Email</type>
</CustomField>