LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/EAName__c.field-meta.xml
<CustomField>
    <fullName>EAName__c</fullName>
    <label>EA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>