LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default will be unchecked, which will be checked by Pardot for the CRM system to identify the records.</description>
    <label>Engagement</label>
    <type>Checkbox</type>
</CustomField>