LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Former_Directorship_End_of_Tenure_Date__c.field-meta.xml
<CustomField>
    <fullName>Former_Directorship_End_of_Tenure_Date__c</fullName>
    <label>Former Directorship End of Tenure Date</label>
    <type>Date</type>
</CustomField>