LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Google_Alert_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Alert_URL__c</fullName>
    <label>Google Alert URL</label>
    <type>Url</type>
</CustomField>