LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/GT_Alumni_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Alumni_Name__c</fullName>
    <label>GT Alumni Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>