LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/GT_Client_Office__c.field-meta.xml
<CustomField>
    <fullName>GT_Client_Office__c</fullName>
    <label>GT Client Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT_Bengaluru</fullName>
                <label>GT Bengaluru</label>
            </value>
            <value>
                <fullName>GT_Bhopal</fullName>
                <label>GT Bhopal</label>
            </value>
            <value>
                <fullName>GT_Chennai</fullName>
                <label>GT Chennai</label>
            </value>
            <value>
                <fullName>GT_Delhi</fullName>
                <label>GT Delhi</label>
            </value>
            <value>
                <fullName>GT_Hyderabad</fullName>
                <label>GT Hyderabad</label>
            </value>
            <value>
                <fullName>GT_Lucknow</fullName>
                <label>GT Lucknow</label>
            </value>
            <value>
                <fullName>GT_Mumbai</fullName>
                <label>GT Mumbai</label>
            </value>
            <value>
                <fullName>GT_Noida</fullName>
                <label>GT Noida</label>
            </value>
            <value>
                <fullName>GT_One</fullName>
                <label>GT One</label>
            </value>
            <value>
                <fullName>GT_Pune</fullName>
                <label>GT Pune</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>