LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/GT_Employee__c.field-meta.xml
<CustomField>
    <fullName>GT_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;GT Employee&quot; of the new client on conversion of which contact record is created.</description>
    <label>GT Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contacts6</relationshipName>
    <type>Lookup</type>
</CustomField>