LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/GT_Member_Firms__c.field-meta.xml
<CustomField>
    <fullName>GT_Member_Firms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;GT Member Firms&quot; of the new client on conversion of which contact record is created.</description>
    <label>GT Member Firms</label>
    <referenceTo>InboundReferral__c</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>