LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/GTI_Member_Firm_Referral_Country__c.field-meta.xml
<CustomField>
    <fullName>GTI_Member_Firm_Referral_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GTI Member Firm Referral Country</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts (GTI Member Firm Referral Country)</relationshipLabel>
    <relationshipName>Client_Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>