LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Home_Course__c.field-meta.xml
<CustomField>
    <fullName>Home_Course__c</fullName>
    <label>Home Course</label>
    <length>255</length>
    <type>Text</type>
</CustomField>