LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Industry_Leader__c.field-meta.xml
<CustomField>
    <fullName>Industry_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>