LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <label>Interested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>