LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Contact_RS_Val__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Contact_RS_Val__c</fullName>
    <description>This is the representation of how strong your relationship is based on calculating how frequently you are in communicatation.</description>
    <label>Corporate Relationship Strength</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>