LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Department_Classification__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Department_Classification__c</fullName>
    <label>Department Classification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>