LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Introhive_Potential_Introductions_Button__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introhive_Potential_Introductions_Button__c</fullName>
    <formula>IF (IntroHive__Potential_Introductions__c &gt; 10, 
HYPERLINK(&quot;/apex/IntroHive__RequestIntroduction?contact_id=&quot; &amp; Id, IMAGE( &quot;https://app.introhive.com/resource/images/salesforce/intros_10_plus.png&quot;, &quot;Potential Introductions&quot;), &quot;_self&quot;), 
IF (IntroHive__Potential_Introductions__c &gt; 0, 
HYPERLINK(&quot;/apex/IntroHive__RequestIntroduction?contact_id=&quot; &amp; Id, IMAGE( &quot;https://app.introhive.com/resource/images/salesforce/intros_&quot; &amp; TEXT(IntroHive__Potential_Introductions__c) &amp; &quot;.png&quot;, &quot;Potential Introductions&quot;), &quot;_self&quot;), 
&quot;&quot; 
) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find Introductions</label>
    <type>Text</type>
</CustomField>