LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Last_Interaction__c</fullName>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>