LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Last_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Last_Interaction_Type__c</fullName>
    <label>Last Interaction Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>