LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Last_Modified_By__c</fullName>
    <label>Last Modified From Introhive By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>