LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Last_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Last_Update_Time__c</fullName>
    <description>The last time the Introhive data was updated on the Contact</description>
    <label>Last Update Time</label>
    <type>DateTime</type>
</CustomField>