LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__LinkedIn_Button__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__LinkedIn_Button__c</fullName>
    <formula>IF( IntroHive__LinkedIn_Url__c != NULL,  HYPERLINK(IntroHive__LinkedIn_Url__c, IMAGE( &quot;http://www.linkedin.com/img/webpromo/btn_profile_bluetxt_80x15.png&quot;, &quot;View LinkedIn Profile&quot;), &quot;_blank&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Profile</label>
    <type>Text</type>
</CustomField>