LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Populated_by_Introhive__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Populated_by_Introhive__c</fullName>
    <description>Indicates the product that was used to create this record when the action is performed via Introhive</description>
    <label>Populated by Introhive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>