LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Potential_Introductions__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Potential_Introductions__c</fullName>
    <label>Introhive Intro Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>