LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IntroHive__Title_Category__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Title_Category__c</fullName>
    <label>Title Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>