LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Investment_Bank_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Investment_Bank_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Bank Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contacts (Investment Bank Contact Name)</relationshipLabel>
    <relationshipName>Client_Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>